force-app/main/default/objects/SFDC_Candidate__c/fields/Candidate_Source__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Source__c</fullName>
    <label>Candidate Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Professional Recruiter</fullName>
            </value>
            <value>
                <fullName>Campus Recruiting</fullName>
            </value>
            <value>
                <fullName>Internal Recruiting</fullName>
            </value>
            <value>
                <fullName>External Referral</fullName>
            </value>
            <value>
                <fullName>External posting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>