force-app/main/default/objects/SFDC_Candidate__c/fields/Degree_Type__c.field-meta.xml
<CustomField>
    <fullName>Degree_Type__c</fullName>
    <label>Degree Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Associate Degree</fullName>
            </value>
            <value>
                <fullName>Bachelor - Arts</fullName>
            </value>
            <value>
                <fullName>Bachelor - Science</fullName>
            </value>
            <value>
                <fullName>Bachelor - Engineering</fullName>
            </value>
            <value>
                <fullName>Juris Doctorate (JD)</fullName>
            </value>
            <value>
                <fullName>Masters - Arts</fullName>
            </value>
            <value>
                <fullName>Masters - Science</fullName>
            </value>
            <value>
                <fullName>Masters - Business Administration</fullName>
            </value>
            <value>
                <fullName>Doctor of Medicine</fullName>
            </value>
            <value>
                <fullName>PhD</fullName>
            </value>
            <value>
                <fullName>Post Doc</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>