force-app/main/default/objects/SFDC_Candidate__c/fields/Reference_Phone__c.field-meta.xml
<CustomField>
    <fullName>Reference_Phone__c</fullName>
    <label>First Reference Phone</label>
    <type>Phone</type>
</CustomField>